Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98150

Designer puppet keeps crashing at startup in batch renderer

    XMLWordPrintable

Details

    • 3bf5e8b671e0f7be7f3fa5004aedbb2f9838c56a (qt/qtdeclarative/dev) b97047ac41b367b47556009a7a78640455881a0b (qt/qtdeclarative/6.2) 8e6c2e3e5d89b2598eb5426d96be43ff3dee3154 (qt/tqtc-qtdeclarative/5.15)

    Description

      The puppet keeps crashing at startup in qsgbatchrenderer::uploadBatch for nullptr error. This is a regression due to fix for https://bugreports.qt.io/browse/QTBUG-93956. The fix added shink(0) calls for vertex and index upload pools, but shink only deallocates the buffer and sets the capacity to 0, but doesn't update the size. When these pools then are used again they do not reallocate the buffers, because the size is non-zero.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              qt.team.quick.subscriptions Qt Quick and Widgets Team
              anmaatta Antti Määttä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes